--- a/Hotel/HotelManagementSytem/HotelManagementSytem.csproj
+++ b/Hotel/HotelManagementSytem/HotelManagementSytem.csproj
@@ -18,8 +18,11 @@
     </PackageReference>
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\WhiteLagoon.Infrastructure\WhiteLagoon.Infrastructure.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\WhiteLagoon.Infrastructure\WhiteLagoon.Infrastructure.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+	    <Folder Include="wwwroot\images\VillaImage\" />
+    </ItemGroup>
 
 </Project>
